<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:scrollbarThumbVertical="@null"
    android:background="@color/white"
    tools:context=".fragments.LoginFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="40dp"
            android:text="@string/stay_true"
            android:textSize="70sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/violet_200"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_marginTop="30dp"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:backgroundTint="@color/violet_200"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textColorHint="@color/violet_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:autofillHints="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/violet_200"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="30dp"
                android:textSize="15sp"
                android:id="@+id/txt_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:backgroundTint="@color/violet_200"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textColorHint="@color/violet_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:autofillHints="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnForgetPassword"
            android:gravity="end"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/violet_500"
            android:clickable="true"
            android:textSize="13sp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/forgot_password"
            android:focusable="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/curved_button_bg"
            android:text="@string/login"/>

        <LinearLayout

            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/half_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/new_here"/>

            <TextView
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:textColor="@color/violet_500"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/button_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"/>





        </LinearLayout>

        <include
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_marginTop="60dp"
            layout="@layout/layout_google_signin_out"/>



    </LinearLayout>

</ScrollView>

