<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stepName"
            android:text="@string/step_name"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:background="@drawable/circar_bg_steps"
            android:layout_width="@dimen/step_name_circle_size"
            android:layout_height="@dimen/step_name_circle_size"/>


        <TextView
            android:id="@+id/stepTitle"
            android:text="@string/step_title"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:background="@color/violet_200"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/circle_edge_size"
            android:layout_width="match_parent"
            android:layout_height="@dimen/step_title_height"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text=""
            android:textColor="@color/white"
            android:textSize="13sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/poppins_medium"
            android:background="@color/violet_200"
            android:layout_marginStart="22dp"
            android:layout_marginTop="@dimen/circle_edge_size"
            android:layout_width="5dp"
            android:layout_height="match_parent"/>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/contentContainer"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </LinearLayout>

            <Button
                android:id="@+id/btnNext"
                android:layout_gravity="end"
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>

        </LinearLayout>




    </LinearLayout>


</RelativeLayout>