<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="60dp"

    android:background="@color/white"
    tools:context=".fragments.PensionFragment">

    <!--    About Pension-->
    <TextView
        android:padding="5dp"
        android:text="@string/about_income_drawdown"
        android:textStyle="bold"
        android:textSize="@dimen/about_text_size"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="@dimen/about_details_text_size"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_income_drawdown_details"/>

    <TextView
        android:visibility="gone"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="Previous annuity qoute requests"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_centerInParent="true"
            android:background="@drawable/empty_state"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <!--TODO: Previous annuity qoute requests-->
        <!--            <androidx.recyclerview.widget.RecyclerView-->
        <!--                android:layout_marginBottom="50dp"-->
        <!--                android:visibility="visible"-->
        <!--                android:layout_width="match_parent"-->
        <!--                tools:listitem="@layout/action_item_layout"-->
        <!--                android:id="@+id/recyclerview_pension_actions"-->
        <!--                android:layout_height="match_parent"/>-->


        <Button
            android:visibility="gone"
            android:id="@+id/request_quote"
            android:layout_alignParentBottom="true"
            android:text="@string/request_a_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <!--    Specific Pension > Application, Transfer, Pension Withdrawals-->
</LinearLayout>